[package]
name = "rust-lambda-http-util"
version = "0.1.0"
authors = ["Tom Najdek <tom@doppnet.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
lazy_static = "1.4.0"
lambda_runtime = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
reqwest = { version = "0.11.5", default_features = false, features=["rustls-tls", "json"] }
chrono = "0.4.19"

[features]
with-lambda = []
